force-app/main/default/objects/StandardProductInventoryLoader__c/StandardProductInventoryLoader__c.object-meta.xml
<CustomObject>
    <label>Standard Product Inventory Loader</label>
    <nameField>
        <displayFormat>DATA-{00000000}</displayFormat>
        <label>Standard Product Import Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Product Inventory Loader</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>