force-app/main/default/objects/StandardProductInventoryLoader__c/fields/customShippingPricePerSqFt__c.field-meta.xml
<CustomField>
    <fullName>customShippingPricePerSqFt__c</fullName>
    <inlineHelpText>This value will override the standard shipping price per SqFt. For no shipping price per SqFt enter $0.00</inlineHelpText>
    <label>Custom Shipping Price per SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>