force-app/main/default/objects/StandardProductInventoryLoader__c/fields/expirationDate__c.field-meta.xml
<CustomField>
    <fullName>expirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>