force-app/main/default/objects/StandardProductInventoryLoader__c/fields/ownerId__c.field-meta.xml
<CustomField>
    <fullName>ownerId__c</fullName>
    <formula>account__r.Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ownerId</label>
    <type>Text</type>
</CustomField>