force-app/main/default/objects/StandardProductInventoryLoader__c/fields/pricePerSqFt__c.field-meta.xml
<CustomField>
    <fullName>pricePerSqFt__c</fullName>
    <label>Price per SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>