force-app/main/default/objects/StandardProductInventoryLoader__c/fields/productLine__c.field-meta.xml
<CustomField>
    <fullName>productLine__c</fullName>
    <description>This data loader only supports standard raw glass product adds and updates.</description>
    <inlineHelpText>This data loader only supports standard raw glass product adds and updates.</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raw Glass</fullName>
                <default>true</default>
                <label>Raw Glass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>