force-app/main/default/objects/StandardProductInventoryLoader__c/fields/standardProductInventoryMatrix__c.field-meta.xml
<CustomField>
    <fullName>standardProductInventoryMatrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Product Inventory Matrix</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>StandardProductInventoryMatrix__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>StandardProductInventoryMatrix__c</referenceTo>
    <relationshipLabel>Standard Product Inventory Loader</relationshipLabel>
    <relationshipName>Standard_Product_Inventory_Loader</relationshipName>
    <type>Lookup</type>
</CustomField>