force-app/main/default/objects/StandardProductInventoryLoader__c/validationRules/Verify_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Product</fullName>
    <active>true</active>
    <description>Product is required when overriding shipping price.</description>
    <errorConditionFormula>IF( AND(ISBLANK(standardProductInventoryMatrix__c),NOT(ISBLANK(customShippingPricePerSqFt__c)))  , TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Product is required when overriding shipping price.</errorMessage>
</ValidationRule>