force-app/main/default/objects/StandardProductInventoryLoader__c/listViews/Loaded.listView-meta.xml
<ListView>
    <fullName>Loaded</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>glassComposition__c</columns>
    <columns>thickness__c</columns>
    <columns>pricePerSqFt__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>standardProductInventoryMatrix__c</columns>
    <filterScope>Everything</filterScope>
    <label>Loaded</label>
    <language>en_US</language>
</ListView>